--- a/snap-time-picker/build.gradle
+++ b/snap-time-picker/build.gradle
@@ -33,10 +33,10 @@ androidExtensions {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 }
 
 ext {
@@ -63,7 +63,5 @@ ext {
     allLicenses = ["Apache-2.0"]
 }
 
-apply from: '../publish/installv1.gradle'
-apply from: '../publish/bintrayv1.gradle'
-//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+//apply from: '../publish/installv1.gradle'
+//apply from: '../publish/bintrayv1.gradle'
