--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,29 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.4.32'
+    project.ext {
+        kotlin_version = '1.4.32'
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        minSdkVersion = 18
+
+        versionName = '1.0.3'
+        versionCode = 10003
+
+        libraryName = 'SnapTimePicker'
+        libraryDescription = 'Another Material Time Picker for developer who do not like default Material Time Picker that difficult to use for most users'
+
+        groupId = 'com.akexorcist'
+        artifactId = 'snap-time-picker'
+
+        siteUrl = 'https://github.com/akexorcist/Android-SnapTimePicker'
+        gitUrl = 'https://github.com/akexorcist/Android-SnapTimePicker.git'
+
+        developerId = 'akexorcist'
+        developName = 'Somkiat Khitwongwattana'
+        developerEmail = 'akexorcist@gmail.com'
+
+        licenseName = 'The Apache License, Version 2.0'
+        licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    }
     repositories {
         google()
         jcenter()
@@ -9,10 +31,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$project.kotlin_version"
         classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.17"
     }
 }
